{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 165,
  "lineage": "3cb628a0-ae9e-8eda-75d8-c1b15dd59f03",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-000ff4015acdd4611",
            "public_dns": "ec2-23-21-207-154.compute-1.amazonaws.com",
            "public_ip": "23.21.207.154",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020046395185:internet-gateway/igw-091d6e86940eaa3db",
            "id": "igw-091d6e86940eaa3db",
            "owner_id": "020046395185",
            "tags": {
              "Name": "default-vpc-gw"
            },
            "vpc_id": "vpc-0a412bec63cd483f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:020046395185:loadbalancer/app/default-alb-ALB/4acac7a052ab0a36",
            "arn_suffix": "app/default-alb-ALB/4acac7a052ab0a36",
            "dns_name": "default-alb-ALB-184922546.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:020046395185:loadbalancer/app/default-alb-ALB/4acac7a052ab0a36",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "default-alb-ALB",
            "security_groups": [
              "sg-0cb77b7bb85a98af1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c9e34f554f2ebdbd"
              },
              {
                "subnet_id": "subnet-0e12b8c1fc273bf3f"
              }
            ],
            "subnets": [
              "subnet-0c9e34f554f2ebdbd",
              "subnet-0e12b8c1fc273bf3f"
            ],
            "vpc_id": "vpc-0a412bec63cd483f2",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb-security-group",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:020046395185:listener/app/default-alb-ALB/4acac7a052ab0a36/081bd24cf3eb7fe5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:020046395185:targetgroup/default-alb-TargetGroup/8ff7002c611f98c1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:020046395185:listener/app/default-alb-ALB/4acac7a052ab0a36/081bd24cf3eb7fe5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:020046395185:loadbalancer/app/default-alb-ALB/4acac7a052ab0a36",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.alb-target-group",
            "module.vpc.aws_security_group.alb-security-group",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-target-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:020046395185:targetgroup/default-alb-TargetGroup/8ff7002c611f98c1",
            "arn_suffix": "targetgroup/default-alb-TargetGroup/8ff7002c611f98c1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:020046395185:targetgroup/default-alb-TargetGroup/8ff7002c611f98c1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "default-alb-TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a412bec63cd483f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000ff4015acdd4611",
            "id": "nat-033ca537cbd2dde95",
            "network_interface_id": "eni-094d5e1cf63bbe375",
            "private_ip": "10.0.1.164",
            "public_ip": "23.21.207.154",
            "subnet_id": "subnet-0e12b8c1fc273bf3f",
            "tags": {
              "Name": "default-vpc-nat-gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.vpc-gw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-016fc9b6fd7ab5a7a",
            "owner_id": "020046395185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-033ca537cbd2dde95",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-vpc-private-route-table"
            },
            "vpc_id": "vpc-0a412bec63cd483f2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.vpc-gw",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-050324588840e9ec2",
            "owner_id": "020046395185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091d6e86940eaa3db",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-vpc-public-route-table"
            },
            "vpc_id": "vpc-0a412bec63cd483f2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc-gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b8ba549d17a3247",
            "route_table_id": "rtb-016fc9b6fd7ab5a7a",
            "subnet_id": "subnet-0cc3fd36df51f6961"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.vpc-gw",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_route_table.private-route-table",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a2d46518934c7b0",
            "route_table_id": "rtb-016fc9b6fd7ab5a7a",
            "subnet_id": "subnet-08510ac8937e8f5e5"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.vpc-gw",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_route_table.private-route-table",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba82452365205f23",
            "route_table_id": "rtb-050324588840e9ec2",
            "subnet_id": "subnet-0e12b8c1fc273bf3f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc-gw",
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4e493539b9f367f",
            "route_table_id": "rtb-050324588840e9ec2",
            "subnet_id": "subnet-0c9e34f554f2ebdbd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc-gw",
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020046395185:security-group/sg-0cb77b7bb85a98af1",
            "description": "security group that allows all ingress and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb77b7bb85a98af1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default-vpc-ALB SG",
            "name_prefix": null,
            "owner_id": "020046395185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-vpc-ALB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a412bec63cd483f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance-security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020046395185:security-group/sg-01c66b938b84fc672",
            "description": "security group that allows all ingress and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c66b938b84fc672",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.10.8/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0cb77b7bb85a98af1"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default-vpc-SG",
            "name_prefix": null,
            "owner_id": "020046395185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-vpc-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a412bec63cd483f2"
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb-security-group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020046395185:subnet/subnet-0cc3fd36df51f6961",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0cc3fd36df51f6961",
            "map_public_ip_on_launch": false,
            "owner_id": "020046395185",
            "tags": {
              "Name": "default-vpc-private-subnet-0"
            },
            "vpc_id": "vpc-0a412bec63cd483f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020046395185:subnet/subnet-08510ac8937e8f5e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-08510ac8937e8f5e5",
            "map_public_ip_on_launch": false,
            "owner_id": "020046395185",
            "tags": {
              "Name": "default-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-0a412bec63cd483f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020046395185:subnet/subnet-0e12b8c1fc273bf3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e12b8c1fc273bf3f",
            "map_public_ip_on_launch": true,
            "owner_id": "020046395185",
            "tags": {
              "Name": "default-vpc-public-subnet-0"
            },
            "vpc_id": "vpc-0a412bec63cd483f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020046395185:subnet/subnet-0c9e34f554f2ebdbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c9e34f554f2ebdbd",
            "map_public_ip_on_launch": true,
            "owner_id": "020046395185",
            "tags": {
              "Name": "default-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0a412bec63cd483f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020046395185:vpc/vpc-0a412bec63cd483f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ece2df336634d3b8",
            "default_route_table_id": "rtb-0091a687c872a899b",
            "default_security_group_id": "sg-09c8f87960f0f22d5",
            "dhcp_options_id": "dopt-e96a8593",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a412bec63cd483f2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0091a687c872a899b",
            "owner_id": "020046395185",
            "tags": {
              "Name": "default-vpc"
            }
          }
        }
      ]
    }
  ]
}